Bug 578606 - Leverage JUnit-4 methods and simplify tests
Change-Id: Idb8eaa57c2dd98100fc2cd13b529dc51b9e25b11
Signed-off-by: Hannes Wellmann <wellmann.hannes1@gmx.net>
Reviewed-on: https://git.eclipse.org/r/c/equinox/rt.equinox.framework/+/190505
Tested-by: Thomas Watson <tjwatson@us.ibm.com>
Reviewed-by: Thomas Watson <tjwatson@us.ibm.com>