@@ -13,6 +13,9 @@
  *******************************************************************************/
 package org.eclipse.osgi.tests.bundles;
 
+import static org.junit.Assert.assertArrayEquals;
+import static org.junit.Assert.assertThrows;
+
 import java.io.BufferedReader;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
@@ -20,7 +23,6 @@ import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.lang.reflect.Method;
-import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
@@ -42,6 +44,7 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.jar.JarEntry;
 import java.util.jar.JarOutputStream;
+import java.util.stream.Collectors;
 import junit.framework.AssertionFailedError;
 import org.eclipse.osgi.internal.loader.BundleLoader;
 import org.eclipse.osgi.internal.loader.ModuleClassLoader;
@@ -459,11 +462,7 @@ public class ClassLoadingBundleTests extends AbstractBundleTests {
 		assertTrue("Host/Frag resolve", installer.resolveBundles(new Bundle[] {hostA, fragA})); //$NON-NLS-1$
 
 		ITestRunner testRunner = (ITestRunner) hostA.loadClass("fragment.test.attach.host.a.internal.test.TestPackageAccess").newInstance(); //$NON-NLS-1$
-		try {
-			testRunner.testIt();
-		} catch (Exception e) {
-			fail("Failed package access test: " + e.getMessage()); //$NON-NLS-1$
-		}
+		testRunner.testIt();
 	}
 
 	public void testFragmentMultiHost() throws Exception {
@@ -477,13 +476,9 @@ public class ClassLoadingBundleTests extends AbstractBundleTests {
 		runTestRunner(hostA2, "fragment.test.attach.host.a.internal.test.TestPackageAccess2"); //$NON-NLS-1$
 	}
 
-	private void runTestRunner(Bundle host, String classname) {
-		try {
-			ITestRunner testRunner = (ITestRunner) host.loadClass(classname).newInstance();
-			testRunner.testIt();
-		} catch (Exception e) {
-			fail("Failed package access test", e); //$NON-NLS-1$
-		}
+	private void runTestRunner(Bundle host, String classname) throws Exception {
+		ITestRunner testRunner = (ITestRunner) host.loadClass(classname).newInstance();
+		testRunner.testIt();
 
 	}
 
@@ -497,11 +492,8 @@ public class ClassLoadingBundleTests extends AbstractBundleTests {
 		Bundle fragB = installer.installBundle("fragment.test.attach.frag.b"); //$NON-NLS-1$
 		Bundle hostARequire = installer.installBundle("fragment.test.attach.host.a.require"); //$NON-NLS-1$
 		assertTrue("RequireA/Frag", installer.resolveBundles(new Bundle[] {hostARequire, fragB})); //$NON-NLS-1$
-		try {
-			hostARequire.loadClass("fragment.test.attach.frag.b.Test"); //$NON-NLS-1$
-		} catch (ClassNotFoundException e) {
-			fail("Unexpected class loading exception", e); //$NON-NLS-1$
-		}
+
+		hostARequire.loadClass("fragment.test.attach.frag.b.Test"); //$NON-NLS-1$
 	}
 
 	public void testLegacyLazyStart() throws Exception {
@@ -771,11 +763,8 @@ public class ClassLoadingBundleTests extends AbstractBundleTests {
 		Bundle test = installer.installBundle("test"); //$NON-NLS-1$
 		StartLevel startLevel = installer.getStartLevel();
 		startLevel.setBundleStartLevel(test, startLevel.getStartLevel() + 10);
-		try {
-			test.start();
-		} catch (BundleException e) {
-			fail("Unexpected exception", e); //$NON-NLS-1$
-		}
+		test.start();
+
 		assertEquals("Wrong state", Bundle.INSTALLED, test.getState()); //$NON-NLS-1$
 		startLevel.setStartLevel(startLevel.getStartLevel() + 15);
 		Object[] expectedFrameworkEvents = new Object[1];
@@ -1281,73 +1270,44 @@ public class ClassLoadingBundleTests extends AbstractBundleTests {
 		assertEquals("root resource", "root classpath", readURL(entryCopy)); //$NON-NLS-1$ //$NON-NLS-2$
 	}
 
-	public void testURLExternalFormat03() throws BundleException {
+	public void testURLExternalFormat03() throws Exception {
 		Bundle test = installer.installBundle("test"); //$NON-NLS-1$
 		// test the external format of bundle resource URLs
 		URL entry = test.getEntry("data/resource1"); //$NON-NLS-1$
 		assertNotNull("entry", entry); //$NON-NLS-1$
-		URI uri1 = null;
-		URI uri2 = null;
-		URI uri3 = null;
-		try {
-			uri1 = new URI(entry.getProtocol(), null, entry.getHost(), entry.getPort(), entry.getPath(), null, entry.getQuery());
-			uri2 = new URI(entry.getProtocol(), entry.getHost(), entry.getPath(), entry.getQuery());
-			uri3 = new URI(entry.toExternalForm());
-		} catch (URISyntaxException e) {
-			fail("Unexpected URI exception", e); //$NON-NLS-1$
-		}
-		URL url1 = null;
-		URL url2 = null;
-		URL url3 = null;
-		URL url4 = null;
-		try {
-			url1 = uri1.toURL();
-			url2 = uri2.toURL();
-			url3 = uri3.toURL();
-			url4 = new URL(uri1.toString());
-		} catch (MalformedURLException e) {
-			fail("Unexpected URL exception", e); //$NON-NLS-1$
-		}
+		URI uri1 = new URI(entry.getProtocol(), null, entry.getHost(), entry.getPort(), entry.getPath(), null, entry.getQuery());
+		URI uri2 = new URI(entry.getProtocol(), entry.getHost(), entry.getPath(), entry.getQuery());
+		URI uri3 = new URI(entry.toExternalForm());
+
+		URL url1 = uri1.toURL();
+		URL url2 = uri2.toURL();
+		URL url3 = uri3.toURL();
+		URL url4 = new URL(uri1.toString());
 		checkURL("root classpath", entry, url1); //$NON-NLS-1$
 		checkURL("root classpath", entry, url2); //$NON-NLS-1$
 		checkURL("root classpath", entry, url3); //$NON-NLS-1$
 		checkURL("root classpath", entry, url4); //$NON-NLS-1$
 	}
 
-	public void testURLExternalFormat04() throws BundleException {
+	public void testURLExternalFormat04() throws Exception {
 		Bundle test = installer.installBundle("test"); //$NON-NLS-1$
 		// test the external format of bundle resource URLs
 		URL entry = test.getResource("data/resource1"); //$NON-NLS-1$
 		assertNotNull("entry", entry); //$NON-NLS-1$
-		URI uri1 = null;
-		URI uri2 = null;
-		URI uri3 = null;
-		try {
-			uri1 = new URI(entry.getProtocol(), null, entry.getHost(), entry.getPort(), entry.getPath(), null, entry.getQuery());
-			uri2 = new URI(entry.getProtocol(), entry.getHost(), entry.getPath(), entry.getQuery());
-			uri3 = new URI(entry.toExternalForm());
-		} catch (URISyntaxException e) {
-			fail("Unexpected URI exception", e); //$NON-NLS-1$
-		}
-		URL url1 = null;
-		URL url2 = null;
-		URL url3 = null;
-		URL url4 = null;
-		try {
-			url1 = uri1.toURL();
-			url2 = uri2.toURL();
-			url3 = uri3.toURL();
-			url4 = new URL(uri1.toString());
-		} catch (MalformedURLException e) {
-			fail("Unexpected URL exception", e); //$NON-NLS-1$
-		}
+		URI uri1 = new URI(entry.getProtocol(), null, entry.getHost(), entry.getPort(), entry.getPath(), null, entry.getQuery());
+		URI uri2 = new URI(entry.getProtocol(), entry.getHost(), entry.getPath(), entry.getQuery());
+		URI uri3 = new URI(entry.toExternalForm());
+		URL url1 = uri1.toURL();
+		URL url2 = uri2.toURL();
+		URL url3 = uri3.toURL();
+		URL url4 = new URL(uri1.toString());
 		checkURL("root classpath", entry, url1); //$NON-NLS-1$
 		checkURL("root classpath", entry, url2); //$NON-NLS-1$
 		checkURL("root classpath", entry, url3); //$NON-NLS-1$
 		checkURL("root classpath", entry, url4); //$NON-NLS-1$
 	}
 
-	private void checkURL(String content, URL orig, URL copy) {
+	private void checkURL(String content, URL orig, URL copy) throws Exception {
 		assertEquals("external format", orig.toExternalForm(), copy.toExternalForm()); //$NON-NLS-1$
 		assertEquals(content, content, readURL(copy));
 	}
@@ -1395,7 +1355,7 @@ public class ClassLoadingBundleTests extends AbstractBundleTests {
 		expectedEvents[2] = "success"; //$NON-NLS-1$
 		expectedEvents[3] = "success"; //$NON-NLS-1$
 		Object[] actualEvents = simpleResults.getResults(4);
-		compareResults(expectedEvents, actualEvents);
+		assertArrayEquals(expectedEvents, actualEvents);
 	}
 
 	public void testMultipleExportFragments03() throws Exception {
@@ -1412,7 +1372,7 @@ public class ClassLoadingBundleTests extends AbstractBundleTests {
 		expectedEvents[2] = "host.multiple.exports.PrivateClass1"; //$NON-NLS-1$
 		expectedEvents[3] = "host.multiple.exports.PrivateClass2"; //$NON-NLS-1$
 		Object[] actualEvents = simpleResults.getResults(4);
-		compareResults(expectedEvents, actualEvents);
+		assertArrayEquals(expectedEvents, actualEvents);
 	}
 
 	public void disableTestXFriends() throws Exception {
@@ -1479,11 +1439,7 @@ public class ClassLoadingBundleTests extends AbstractBundleTests {
 		importerExporter3.start();
 		importerExporter3.stop();
 		importerExporter3.update();
-		try {
-			importerExporter3.start();
-		} catch (Throwable t) {
-			fail("Unexpected exception", t); //$NON-NLS-1$
-		}
+		importerExporter3.start();
 	}
 
 	public void testUninstallInUse01() throws BundleException {
@@ -1529,11 +1485,7 @@ public class ClassLoadingBundleTests extends AbstractBundleTests {
 		Bundle testX = installer.installBundle("test.bug235958.x"); //$NON-NLS-1$
 		Bundle testY = installer.installBundle("test.bug235958.y"); //$NON-NLS-1$
 		installer.resolveBundles(new Bundle[] {testX, testY});
-		try {
-			testX.start();
-		} catch (Exception e) {
-			fail("Unexpected Exception", e); //$NON-NLS-1$
-		}
+		testX.start();
 	}
 
 	public void testBuddyClassLoadingRegistered1() throws Exception {
@@ -1588,35 +1540,16 @@ public class ClassLoadingBundleTests extends AbstractBundleTests {
 	public void testBuddyClassLoadingRegistered3() throws Exception {
 		Bundle registeredA = installer.installBundle("buddy.registered.a"); //$NON-NLS-1$
 		installer.resolveBundles(new Bundle[] {registeredA});
-		try {
-			registeredA.loadClass("buddy.registered.a.test1.ATest"); //$NON-NLS-1$
-			fail("expected ClassNotFoundException"); //$NON-NLS-1$
-		} catch (ClassNotFoundException e) {
-			// expected
-		}
-		try {
-			registeredA.loadClass("buddy.registered.a.test2.ATest"); //$NON-NLS-1$
-			fail("expected ClassNotFoundException"); //$NON-NLS-1$
-		} catch (ClassNotFoundException e) {
-			// expected
-		}
+
+		assertThrows(ClassNotFoundException.class, () -> registeredA.loadClass("buddy.registered.a.test1.ATest"));
+		assertThrows(ClassNotFoundException.class, () -> registeredA.loadClass("buddy.registered.a.test2.ATest"));
+
 		Bundle registeredATest1 = installer.installBundle("buddy.registered.a.test1"); //$NON-NLS-1$
 		Bundle registeredATest2 = installer.installBundle("buddy.registered.a.test2"); //$NON-NLS-1$
 		installer.resolveBundles(new Bundle[] {registeredATest1, registeredATest2});
 
-		try {
-			Class testClass = registeredA.loadClass("buddy.registered.a.test1.ATest"); //$NON-NLS-1$
-			assertNotNull("testClass", testClass); //$NON-NLS-1$
-		} catch (ClassNotFoundException e) {
-			fail("Unexpected ClassNotFoundException", e); //$NON-NLS-1$
-		}
-
-		try {
-			Class testClass = registeredA.loadClass("buddy.registered.a.test2.ATest"); //$NON-NLS-1$
-			assertNotNull("testClass", testClass); //$NON-NLS-1$
-		} catch (ClassNotFoundException e) {
-			fail("Unexpected ClassNotFoundException", e); //$NON-NLS-1$
-		}
+		assertNotNull("Class buddy.registered.a.test1.ATest", registeredA.loadClass("buddy.registered.a.test1.ATest"));
+		assertNotNull("Class buddy.registered.a.test2.ATest", registeredA.loadClass("buddy.registered.a.test2.ATest"));
 	}
 
 	public void testBuddyClassLoadingDependent1() throws Exception {
@@ -1668,38 +1601,17 @@ public class ClassLoadingBundleTests extends AbstractBundleTests {
 
 	public void testBuddyClassLoadingDependent3() throws Exception {
 		Bundle dependentA = installer.installBundle("buddy.dependent.a"); //$NON-NLS-1$
-		installer.resolveBundles(new Bundle[] {dependentA});
+		installer.resolveBundles(new Bundle[] { dependentA });
 
-		try {
-			dependentA.loadClass("buddy.dependent.a.test1.ATest"); //$NON-NLS-1$
-			fail("expected ClassNotFoundException"); //$NON-NLS-1$
-		} catch (ClassNotFoundException e) {
-			// expected
-		}
-
-		try {
-			dependentA.loadClass("buddy.dependent.a.test2.ATest"); //$NON-NLS-1$
-			fail("expected ClassNotFoundException"); //$NON-NLS-1$
-		} catch (ClassNotFoundException e) {
-			// expected
-		}
+		assertThrows(ClassNotFoundException.class, () -> dependentA.loadClass("buddy.dependent.a.test1.ATest"));
+		assertThrows(ClassNotFoundException.class, () -> dependentA.loadClass("buddy.dependent.a.test2.ATest"));
 
 		Bundle dependentATest1 = installer.installBundle("buddy.dependent.a.test1"); //$NON-NLS-1$
 		Bundle dependentATest2 = installer.installBundle("buddy.dependent.a.test2"); //$NON-NLS-1$
-		installer.resolveBundles(new Bundle[] {dependentATest1, dependentATest2});
+		installer.resolveBundles(new Bundle[] { dependentATest1, dependentATest2 });
 
-		try {
-			Class testClass = dependentA.loadClass("buddy.dependent.a.test1.ATest"); //$NON-NLS-1$
-			assertNotNull("testClass", testClass); //$NON-NLS-1$
-		} catch (ClassNotFoundException e) {
-			fail("Unexpected ClassNotFoundException", e); //$NON-NLS-1$
-		}
-		try {
-			Class testClass = dependentA.loadClass("buddy.dependent.a.test2.ATest"); //$NON-NLS-1$
-			assertNotNull("testClass", testClass); //$NON-NLS-1$
-		} catch (ClassNotFoundException e) {
-			fail("Unexpected ClassNotFoundException", e); //$NON-NLS-1$
-		}
+		assertNotNull("Class buddy.dependent.a.test1.ATest", dependentA.loadClass("buddy.dependent.a.test1.ATest"));
+		assertNotNull("Class buddy.dependent.a.test2.ATest", dependentA.loadClass("buddy.dependent.a.test2.ATest"));
 	}
 
 	public void testBuddyClassLoadingInvalid() throws Exception {
@@ -1725,23 +1637,14 @@ public class ClassLoadingBundleTests extends AbstractBundleTests {
 	public void testBuddyClassLoadingGlobalNotFound() throws Exception {
 		Bundle global = installer.installBundle("test.bug438904.global");
 
-		try {
-			global.loadClass("does.not.exist.Test");
-			fail("Expected class not found exception.");
-		} catch (ClassNotFoundException e) {
-			// expected
-		}
+		assertThrows(ClassNotFoundException.class, () -> global.loadClass("does.not.exist.Test"));
 		assertNull("Expected null resource found.", global.getResource("does/not/exist/Test.txt"));
 	}
 
 	public void testBuddyClassLoadingGlobalFound() throws Exception {
 		Bundle global = installer.installBundle("test.bug438904.global");
 
-		try {
-			global.loadClass("org.osgi.framework.Bundle");
-		} catch (ClassNotFoundException e) {
-			fail("Unexpected class not found exception.");
-		}
+		global.loadClass("org.osgi.framework.Bundle");
 	}
 
 	public void testUnitTestForcompoundEnumerations() {
@@ -1792,8 +1695,7 @@ public class ClassLoadingBundleTests extends AbstractBundleTests {
 		Bundle test = installer.installBundle("test"); //$NON-NLS-1$
 		Class clazz = test.loadClass("test1.Activator"); //$NON-NLS-1$
 		ClassLoader cl = clazz.getClassLoader();
-		if (!(cl instanceof BundleReference))
-			fail("ClassLoader is not of type BundleReference"); //$NON-NLS-1$
+		assertTrue("ClassLoader is not of type BundleReference", cl instanceof BundleReference);
 		assertEquals("Wrong bundle", test, ((BundleReference) cl).getBundle()); //$NON-NLS-1$
 	}
 
@@ -1805,16 +1707,12 @@ public class ClassLoadingBundleTests extends AbstractBundleTests {
 		assertEquals(1, resource.getPort());
 	}
 
-	public void testManifestPackageSpec() {
-		try {
-			Bundle test = installer.installBundle("test.manifestpackage"); //$NON-NLS-1$
-			test.start();
-		} catch (Exception e) {
-			fail("Unexpected exception", e); //$NON-NLS-1$
-		}
+	public void testManifestPackageSpec() throws BundleException {
+		Bundle test = installer.installBundle("test.manifestpackage"); //$NON-NLS-1$
+		test.start();
 	}
 
-	public void testArrayTypeLoad() {
+	public void testArrayTypeLoad() throws ClassNotFoundException {
 		doTestArrayTypeLoad("[B"); //$NON-NLS-1$
 		doTestArrayTypeLoad("[C"); //$NON-NLS-1$
 		doTestArrayTypeLoad("[D"); //$NON-NLS-1$
@@ -1828,47 +1726,25 @@ public class ClassLoadingBundleTests extends AbstractBundleTests {
 		doTestArrayTypeLoad("[[Lorg.eclipse.osgi.tests.bundles.ArrayTest;"); //$NON-NLS-1$
 	}
 
-	public void testSystemBundleGetResources01() {
+	public void testSystemBundleGetResources01() throws IOException {
 		Bundle systemBundle = OSGiTestsActivator.getContext().getBundle(0);
-		Enumeration resources = null;
-		try {
-			resources = systemBundle.getResources("systembundle.properties");
-		} catch (IOException e) {
-			fail("Failed to get resources", e);
-		}
-		assertNotNull("Resources is null", resources);
+		assertNotNull("Resources is null", systemBundle.getResources("systembundle.properties"));
 	}
 
-	public void testSystemBundleGetResources02() {
+	public void testSystemBundleGetResources02() throws IOException {
 		Bundle systemBundle = OSGiTestsActivator.getContext().getBundle(0);
-		Enumeration resources = null;
-		try {
-			resources = systemBundle.getResources("java/lang/test.resource");
-		} catch (IOException e) {
-			fail("Failed to get resources", e);
-		}
-		assertNull("Resources is not null", resources);
+		assertNull("Resources is not null", systemBundle.getResources("java/lang/test.resource"));
 	}
 
-	public void testBug299921() {
+	public void testBug299921() throws Exception {
 		ClassLoader cl = this.getClass().getClassLoader();
-		Enumeration resources = null;
-		try {
-			Method findMethod = BundleInstallUpdateTests.findDeclaredMethod(cl.getClass(), "findResources",
-					String.class);
-			findMethod.setAccessible(true);
+		Method findMethod = BundleInstallUpdateTests.findDeclaredMethod(cl.getClass(), "findResources", String.class);
+		findMethod.setAccessible(true);
 
-			resources = (Enumeration) findMethod.invoke(cl, new Object[] {"test/doesnotexist.txt"});
-		} catch (Exception e) {
-			fail("Unexpected error calling getResources", e);
-		}
+		Enumeration resources = (Enumeration) findMethod.invoke(cl, "test/doesnotexist.txt");
 		assertNotNull("Should not be null", resources);
 		assertFalse("Found resources!", resources.hasMoreElements());
-		try {
-			resources = cl.getResources("test/doesnotexist.txt");
-		} catch (IOException e) {
-			fail("Unexpected IOException", e);
-		}
+		resources = cl.getResources("test/doesnotexist.txt");
 		assertNotNull("Should not be null", resources);
 		assertFalse("Found resources!", resources.hasMoreElements());
 	}
@@ -1911,7 +1787,7 @@ public class ClassLoadingBundleTests extends AbstractBundleTests {
 		}
 	}
 
-	public void testBug348805() {
+	public void testBug348805() throws BundleException {
 		final boolean[] endCalled = {false};
 		ResolverHookFactory error = triggers -> new ResolverHook() {
 			public void filterSingletonCollisions(BundleCapability singleton, Collection collisionCandidates) {
@@ -1933,22 +1809,15 @@ public class ClassLoadingBundleTests extends AbstractBundleTests {
 		ServiceRegistration reg = OSGiTestsActivator.getContext().registerService(ResolverHookFactory.class, error, null);
 		try {
 			Bundle test = installer.installBundle("test"); //$NON-NLS-1$
-			try {
-				test.start();
-				fail("Should not be able to start this bundle");
-			} catch (BundleException e) {
-				// expected
-				assertEquals("Wrong exception type.", BundleException.REJECTED_BY_HOOK, e.getType());
-			}
-		} catch (BundleException e) {
-			fail("Unexpected install fail", e);
+			BundleException e = assertThrows(BundleException.class, () -> test.start());
+			assertEquals("Wrong exception type.", BundleException.REJECTED_BY_HOOK, e.getType());
 		} finally {
 			reg.unregister();
 		}
 		assertTrue("end is not called", endCalled[0]);
 	}
 
-	public void testBug348806() {
+	public void testBug348806() throws BundleException {
 		ResolverHookFactory error = triggers -> new ResolverHook() {
 			public void filterSingletonCollisions(BundleCapability singleton, Collection collisionCandidates) {
 				// Nothing
@@ -1969,21 +1838,14 @@ public class ClassLoadingBundleTests extends AbstractBundleTests {
 		ServiceRegistration reg = OSGiTestsActivator.getContext().registerService(ResolverHookFactory.class, error, null);
 		try {
 			Bundle test = installer.installBundle("test"); //$NON-NLS-1$
-			try {
-				test.start();
-				fail("Should not be able to start this bundle");
-			} catch (BundleException e) {
-				// expected
-				assertEquals("Wrong exception type.", BundleException.REJECTED_BY_HOOK, e.getType());
-			}
-		} catch (BundleException e) {
-			fail("Unexpected install fail", e);
+			BundleException e = assertThrows(BundleException.class, () -> test.start());
+			assertEquals("Wrong exception type.", BundleException.REJECTED_BY_HOOK, e.getType());
 		} finally {
 			reg.unregister();
 		}
 	}
 
-	public void testBug370258_beginException() {
+	public void testBug370258_beginException() throws BundleException {
 		final boolean[] endCalled = {false};
 		ResolverHookFactory endHook = triggers -> new ResolverHook() {
 			public void filterSingletonCollisions(BundleCapability singleton, Collection collisionCandidates) {
@@ -2010,15 +1872,8 @@ public class ClassLoadingBundleTests extends AbstractBundleTests {
 		ServiceRegistration errorReg = OSGiTestsActivator.getContext().registerService(ResolverHookFactory.class, error, null);
 		try {
 			Bundle test = installer.installBundle("test"); //$NON-NLS-1$
-			try {
-				test.start();
-				fail("Should not be able to start this bundle");
-			} catch (BundleException e) {
-				// expected
-				assertEquals("Wrong exception type.", BundleException.REJECTED_BY_HOOK, e.getType());
-			}
-		} catch (BundleException e) {
-			fail("Unexpected install fail", e);
+			BundleException e = assertThrows(BundleException.class, () -> test.start());
+			assertEquals("Wrong exception type.", BundleException.REJECTED_BY_HOOK, e.getType());
 		} finally {
 			errorReg.unregister();
 			endReg.unregister();
@@ -2026,7 +1881,7 @@ public class ClassLoadingBundleTests extends AbstractBundleTests {
 		assertTrue("end is not called", endCalled[0]);
 	}
 
-	public void testBug370258_endException() {
+	public void testBug370258_endException() throws BundleException {
 		final boolean[] endCalled = {false};
 		ResolverHookFactory endHook = triggers -> new ResolverHook() {
 			public void filterSingletonCollisions(BundleCapability singleton, Collection collisionCandidates) {
@@ -2067,15 +1922,8 @@ public class ClassLoadingBundleTests extends AbstractBundleTests {
 		ServiceRegistration endReg = OSGiTestsActivator.getContext().registerService(ResolverHookFactory.class, endHook, null);
 		try {
 			Bundle test = installer.installBundle("test"); //$NON-NLS-1$
-			try {
-				test.start();
-				fail("Should not be able to start this bundle");
-			} catch (BundleException e) {
-				// expected
-				assertEquals("Wrong exception type.", BundleException.REJECTED_BY_HOOK, e.getType());
-			}
-		} catch (BundleException e) {
-			fail("Unexpected install fail", e);
+			BundleException e = assertThrows(BundleException.class, () -> test.start());
+			assertEquals("Wrong exception type.", BundleException.REJECTED_BY_HOOK, e.getType());
 		} finally {
 			errorReg.unregister();
 			endReg.unregister();
@@ -2085,43 +1933,22 @@ public class ClassLoadingBundleTests extends AbstractBundleTests {
 
 	public void testLoadClassUnresolved() throws Exception {
 		Bundle chainTest = installer.installBundle("chain.test"); //$NON-NLS-1$
-		assertFalse("Should not resolve bundle: " + chainTest, installer.resolveBundles(new Bundle[] {chainTest}));
-		try {
-			fail("Should not be able to load class: " + chainTest.loadClass("chain.test.TestSingleChain")); //$NON-NLS-1$
-		} catch (ClassNotFoundException e) {
-			// expected
-		}
+		assertFalse("Should not resolve bundle: " + chainTest, installer.resolveBundles(new Bundle[] { chainTest }));
+		assertThrows("Should not be able to load class: chain.test.TestSingleChain", ClassNotFoundException.class,
+				() -> chainTest.loadClass("chain.test.TestSingleChain"));
 
 	}
 
-	private void doTestArrayTypeLoad(String name) {
-		try {
-			Class arrayType = OSGiTestsActivator.getBundle().loadClass(name);
-			assertNotNull("Null class", arrayType); //$NON-NLS-1$
-			assertTrue("Class is not an array: " + arrayType, arrayType.isArray()); //$NON-NLS-1$
-		} catch (ClassNotFoundException e) {
-			fail("Unexpected exception", e); //$NON-NLS-1$
-		}
+	private void doTestArrayTypeLoad(String name) throws ClassNotFoundException {
+		Class<?> arrayType = OSGiTestsActivator.getBundle().loadClass(name);
+		assertNotNull("Null class", arrayType); //$NON-NLS-1$
+		assertTrue("Class is not an array: " + arrayType, arrayType.isArray()); //$NON-NLS-1$
 	}
 
-	private String readURL(URL url) {
-		StringBuilder sb = new StringBuilder();
-		try {
-			BufferedReader reader = new BufferedReader(new InputStreamReader(url.openStream()));
-			try {
-				for (String line = reader.readLine(); line != null;) {
-					sb.append(line);
-					line = reader.readLine();
-					if (line != null)
-						sb.append('\n');
-				}
-			} finally {
-				reader.close();
-			}
-		} catch (IOException e) {
-			fail("Unexpected exception reading url: " + url.toExternalForm(), e); //$NON-NLS-1$
+	private String readURL(URL url) throws IOException {
+		try (BufferedReader reader = new BufferedReader(new InputStreamReader(url.openStream()))) {
+			return reader.lines().collect(Collectors.joining("\n"));
 		}
-		return sb.toString();
 	}
 
 	public void testDefaultLocalUninstall() throws Exception {
@@ -2352,21 +2179,13 @@ public class ClassLoadingBundleTests extends AbstractBundleTests {
 		ClassLoader importerCL = importerWiring.getClassLoader();
 		ClassLoader requirerCL = requirerWiring.getClassLoader();
 
-		try {
-			importerCL.loadClass("export1.SomeClass");
-			fail("Expecting LinkageError.");
-		} catch (LinkageError e) {
-			// expected; the class is invalid
-		}
+		assertThrows(LinkageError.class, () -> importerCL.loadClass("export1.SomeClass"));
+
 		URL export3Resource = importerCL.getResource("export3/resource.txt");
 		assertNotNull("Missing resource.", export3Resource);
 
-		try {
-			requirerCL.loadClass("export1.SomeClass");
-			fail("Expecting LinkageError.");
-		} catch (LinkageError e) {
-			// expected; the class is invalid
-		}
+		assertThrows(LinkageError.class, () -> requirerCL.loadClass("export1.SomeClass"));
+
 		export3Resource = requirerCL.getResource("export3/resource.txt");
 		assertNotNull("Missing resource.", export3Resource);
 
@@ -2381,27 +2200,18 @@ public class ClassLoadingBundleTests extends AbstractBundleTests {
 			}
 		});
 
-		try {
-			importerCL.loadClass("export2.SomeClass");
-			fail("Expecting LinkageError.");
-		} catch (LinkageError e) {
-			// expected; the class is invalid
-			// NOTE the import sources are calculated at loader creating time
-			// which happened before the refresh
-		}
+		assertThrows(LinkageError.class, () -> importerCL.loadClass("export2.SomeClass"));
+		// NOTE the import sources are calculated at loader creating time which happened
+		// before the refresh
+
 		URL export4Resource = importerCL.getResource("export4/resource.txt");
 		// Note that import sources are calculated at loader creating time
 		// which happened before the refresh
 		assertNotNull("Missing resource.", export4Resource);
 
-		try {
-			requirerCL.loadClass("export2.SomeClass");
-			fail("Expecting ClassNotFoundException.");
-		} catch (ClassNotFoundException e) {
-			// expected; the wire is invalid
-			// NOTE the require sources are calculated lazily but now
-			// the wire is invalid after the refresh
-		}
+		assertThrows(ClassNotFoundException.class, () -> requirerCL.loadClass("export2.SomeClass"));
+		// NOTE the require sources are calculated lazily but now the wire is invalid
+		// after the refresh
 
 		export4Resource = requirerCL.getResource("export4/resource.txt");
 		assertNull("Found resource from invalid wire.", export4Resource);
@@ -2418,7 +2228,7 @@ public class ClassLoadingBundleTests extends AbstractBundleTests {
 		assertNull("Found more events.", events.poll(1, TimeUnit.SECONDS));
 	}
 
-	public void testBug565522FragmentClasspath() throws IOException, BundleException {
+	public void testBug565522FragmentClasspath() throws Exception {
 		ByteArrayOutputStream libResourceJarBytes1 = new ByteArrayOutputStream();
 		try (JarOutputStream libResourceJar = new JarOutputStream(libResourceJarBytes1)) {
 			libResourceJar.putNextEntry(new JarEntry("META-INF/"));
